# CP2-Worm-Algorithm-CPP

./: .gitignore  README.md
CPP_code/: run_worm.zsh
CPP_code/output/: probList.txt  probabilities.txt
CPP_code/src/: CMakeLists.txt  old.txt  wormCP2Mu2dAFMplaq.cpp
algorithm/: run_worm.zsh
analysis/: analysis.ipynb  requirements.txt
